Alignment Fix

--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -783,8 +783,11 @@ input[type=checkbox]:checked ~ .sidebar-icon-toggle >
       text-align: left
     .meta
       font-size: 1rem
+      justify-content: flex-start
     .date
       width: 20ch
+      margin: 0
+      text-align: left
     &:nth-of-type(2n)
       flex-direction: column
       .blog-content
